--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ button img{
     }
     #decryption textarea{
         width: 100%;
-        height: 50px;
+        height: 40px;
         border: 1px solid #343434;
         padding: 10px;
         margin-bottom: 50px;
@@ -281,4 +281,68 @@ button img{
         color: #eee;
         font-size: 17px;
     }
+    
+     #result{
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 18px;
+    background-color: #1C1C1C;
+    border: 1px solid #343434;
+    width: 50%;
+    display: none;
+    margin-top: 40px;
+}
+#encryption{
+    margin-top: 20px;
+    width: 58%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+#encryption h5{
+    font-size: 16px;
+    font-weight: 500;
+    color: #6e6e6e;
+    margin-bottom: 13px;
+}
+#encryption textarea{
+    width: 100%;
+    margin-left: -5px;
+    height: 50px;
+    border: 1px solid #343434;
+    padding: 10px;
+    margin-bottom: 40px;
+    margin-top: 05px;
+    border-radius: 8px;
+    font-size: 17px;
+    outline: none;
+    background-color: #1C1C1C;
+}
+#encryption input{
+    width: 100%;
+    border: 1px solid #343434;
+    padding: 10px;
+    margin-bottom: 50px;
+    border-radius: 8px;
+    font-size: 16px;
+    outline: none;
+    background-color: #1C1C1C;
+}
+
+#encryption button{
+    display: flex;
+    align-items: center;
+    color: #6e6e6e;
+    background-color: #1C1C1C;
+
+    border: none;
+    width: 100%;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 10px;
+    color: #eee;
+    font-size: 17px;
+}
 }
